--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -19,6 +19,14 @@ jobs:
         with:
           node-version: "16"
 
+      - name: restore lerna
+        uses: actions/cache@v2
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.lock') }}
+
       - name: "Setup npm"
         run: |
           npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
@@ -26,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+          npm run build
           npx lerna bootstrap
 
       - name: Run tests
