--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,4 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.6-unstable.16"
+  "packages": ["packages/*"],
+  "version": "0.0.1-unstable.1"
 }
