--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
-          npx lerna bootstrap
-
+          npm ci          
+          ./bootstrap.sh
+          ./build.sh
       - name: Run tests
         run: npx lerna exec npm run test
