--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.6-unstable.16",
+  "version": "0.0.6",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -77,7 +77,7 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.3",
-    "@trustcerts/config-local": "^0.0.6-unstable.16",
+    "@trustcerts/config-local": "^0.0.6",
     "husky": "^7.0.4",
     "size-limit": "^6.0.3",
     "tsdx": "^0.14.1",
@@ -85,8 +85,8 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.0.6-unstable.16",
-    "@trustcerts/did-id-create": "^0.0.6-unstable.16"
+    "@trustcerts/core": "^0.0.6",
+    "@trustcerts/did-id-create": "^0.0.6"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
