--- a/packages/claim-create/package.json
+++ b/packages/claim-create/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.6-unstable.16",
+  "version": "0.0.6",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -77,11 +77,11 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.4",
-    "@trustcerts/config-local": "^0.0.6-unstable.16",
-    "@trustcerts/signature-verify": "^0.0.6-unstable.16",
-    "@trustcerts/template-create": "^0.0.6-unstable.16",
-    "@trustcerts/template-verify": "^0.0.6-unstable.16",
-    "@trustcerts/wallet": "^0.0.6-unstable.16",
+    "@trustcerts/config-local": "^0.0.6",
+    "@trustcerts/signature-verify": "^0.0.6",
+    "@trustcerts/template-create": "^0.0.6",
+    "@trustcerts/template-verify": "^0.0.6",
+    "@trustcerts/wallet": "^0.0.6",
     "husky": "^7.0.4",
     "size-limit": "^6.0.4",
     "tsdx": "^0.14.1",
@@ -89,9 +89,9 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@trustcerts/claim-verify": "^0.0.6-unstable.16",
-    "@trustcerts/core": "^0.0.6-unstable.16",
-    "@trustcerts/signature-create": "^0.0.6-unstable.16"
+    "@trustcerts/claim-verify": "^0.0.6",
+    "@trustcerts/core": "^0.0.6",
+    "@trustcerts/signature-create": "^0.0.6"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
