--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.6-unstable.16",
+  "version": "0.0.6",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -81,9 +81,9 @@
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.4.7",
     "@size-limit/preset-small-lib": "^5.0.5",
-    "@trustcerts/config-local": "^0.0.6-unstable.16",
-    "@trustcerts/did-id-create": "^0.0.6-unstable.16",
-    "@trustcerts/wallet": "^0.0.6-unstable.16",
+    "@trustcerts/config-local": "^0.0.6",
+    "@trustcerts/did-id-create": "^0.0.6",
+    "@trustcerts/wallet": "^0.0.6",
     "@types/axios": "^0.14.0",
     "@types/bs58": "^4.0.1",
     "husky": "^7.0.2",
