--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -36,4 +36,4 @@ jobs:
           npm ci          
           ./build.sh
       - name: Run tests
-        run: npx lerna exec npm run test
+        run: npx lerna exec --concurrency=1 npm run test
