--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.0.6",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.0.7",
   "npmClient": "npm"
 }
