--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.7",
+  "packages": ["packages/*"],
+  "version": "0.0.1",
   "npmClient": "npm"
 }
