--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,9 @@ jobs:
 
       - name: "Setup npm"
         run: |
-          npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
+          npm set "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: "Version and publish"
         env:
@@ -33,7 +35,7 @@ jobs:
         run: |
           git config user.name "trustcerts"
           git config user.email "dev@trustcerts.de"
-
+          npm whoami
           if [ ${{ github.base_ref }} = development ]; then
             npx lerna version --conventional-commits --conventional-prerelease --preid beta --yes
           else
