--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.8-beta.0",
+  "version": "0.0.8",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -74,9 +74,9 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.4",
-    "@trustcerts/claim-create": "^0.0.8-beta.0",
-    "@trustcerts/config-local": "^0.0.8-beta.0",
-    "@trustcerts/signature-create": "^0.0.8-beta.0",
+    "@trustcerts/claim-create": "^0.0.8",
+    "@trustcerts/config-local": "^0.0.8",
+    "@trustcerts/signature-create": "^0.0.8",
     "@trustcerts/wallet": "^0.0.6",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.7",
@@ -89,10 +89,10 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.0.8-beta.0",
-    "@trustcerts/signature-verify": "^0.0.8-beta.0",
-    "@trustcerts/template-create": "^0.0.8-beta.0",
-    "@trustcerts/template-verify": "^0.0.8-beta.0",
+    "@trustcerts/core": "^0.0.8",
+    "@trustcerts/signature-verify": "^0.0.8",
+    "@trustcerts/template-create": "^0.0.8",
+    "@trustcerts/template-verify": "^0.0.8",
     "mustache": "^4.2.0",
     "protobufjs": "^6.11.2",
     "qrcode": "^1.4.4"
