--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "version": "0.0.12",
-  "npmClient": "npm",
-  "command": {
-    "publish": {
-      "registry": "https://npmjs.org"
-    }
-  }
+  "npmClient": "npm"
 }
