--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "publish:stable:minor": "lerna publish minor",
     "publish:stable:patch": "lerna publish patch",
     "publish:unstable": "lerna publish prerelease --preid unstable --yes",
-    "release": "lerna publish",
+    "release": "lerna publish from-git --yes --no-verify-access",
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
     "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react"
