--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "test": "lerna run --concurrency=1 test --stream",
     "build": "./build.sh",
     "postinstall": "./bootstrap.sh",
-    "publish:stable:major": "lerna publish major",
-    "publish:stable:minor": "lerna publish minor",
-    "publish:stable:patch": "lerna publish patch",
-    "publish:unstable": "lerna publish prerelease --preid unstable --yes",
+    "version": "lerna version --conventional-commits --conventional-graduate --yes",
     "release": "lerna publish from-git --yes --no-verify-access",
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
