--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "./build.sh",
     "postinstall": "./bootstrap.sh",
     "version": "lerna version --conventional-commits --conventional-graduate --yes",
-    "release": "lerna publish from-git --yes --no-verify-access",
+    "release": "lerna publish from-git --yes --no-verify-access --create-release=github",
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
     "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react"
