--- a/packages/config-local/package.json
+++ b/packages/config-local/package.json
@@ -31,7 +31,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/config-local",
-  "author": "Mirko Mollik",
+  "author": "trustcerts",
   "module": "dist/config-local.esm.js",
   "size-limit": [
     {
