--- a/packages/template-create/package.json
+++ b/packages/template-create/package.json
@@ -31,7 +31,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/template-create",
-  "author": "Mirko Mollik",
+  "author": "trustcerts",
   "module": "dist/template-create.esm.js",
   "size-limit": [
     {
