--- a/packages/template-verify/package.json
+++ b/packages/template-verify/package.json
@@ -31,7 +31,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/template-verify",
-  "author": "Mirko Mollik",
+  "author": "trustcerts",
   "module": "dist/template-verify.esm.js",
   "size-limit": [
     {
