--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -31,7 +31,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/claim-verify",
-  "author": "trustcerts",
+  "author": "Mirko Mollik",
   "module": "dist/claim-verify.esm.js",
   "size-limit": [
     {
@@ -77,7 +77,6 @@
     "@trustcerts/claim-create": "^0.1.6",
     "@trustcerts/config-local": "^0.1.6",
     "@trustcerts/signature-create": "^0.1.6",
-    "@trustcerts/template-create": "^0.1.6",
     "@trustcerts/wallet": "^0.0.6",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.7",
@@ -92,6 +91,7 @@
   "dependencies": {
     "@trustcerts/core": "^0.1.6",
     "@trustcerts/signature-verify": "^0.1.6",
+    "@trustcerts/template-create": "^0.1.6",
     "@trustcerts/template-verify": "^0.1.6",
     "mustache": "^4.2.0",
     "protobufjs": "^6.11.2",
