--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -31,7 +31,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/wallet",
-  "author": "trustcerts",
+  "author": "Mirko Mollik",
   "module": "dist/wallet.esm.js",
   "size-limit": [
     {
