--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -17,7 +17,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "api:platform": "openapi-generator-cli generate -g typescript-axios -i https://platform.dev.trustcerts.de/api-json -o src/platform --api-name-suffix=PlatformApi --additional-properties=supportsES6=true"
   },
   "husky": {
     "hooks": {
@@ -31,7 +32,7 @@
     "trailingComma": "es5"
   },
   "name": "@trustcerts/claim-verify",
-  "author": "Mirko Mollik",
+  "author": "trustcerts",
   "module": "dist/claim-verify.esm.js",
   "size-limit": [
     {
@@ -93,6 +94,7 @@
     "@trustcerts/signature-verify": "^0.1.6",
     "@trustcerts/template-create": "^0.1.6",
     "@trustcerts/template-verify": "^0.1.6",
+    "@openapitools/openapi-generator-cli": "^2.4.7",
     "mustache": "^4.2.0",
     "protobufjs": "^6.11.2",
     "qrcode": "^1.4.4"
