split VC tests into create, verify and revocation (JWS & BBS+)

--- a/packages/vc-revocation/package.json
+++ b/packages/vc-revocation/package.json
@@ -43,8 +43,41 @@
       "limit": "10 KB"
     }
   ],
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "moduleNameMapper": {
+      "^jose/(.*)$": "<rootDir>/node_modules/jose/dist/node/cjs/$1"
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 0,
+        "functions": 0,
+        "lines": 0,
+        "statements": 0
+      }
+    },
+    "collectCoverageFrom": [
+      "src/*.{js,ts}"
+    ]
+  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.3",
+    "@trustcerts/config-local": "^0.3.3",
+    "@trustcerts/vc-create": "^0.3.3",
+    "@trustcerts/vc-verify": "^0.3.3",
+    "@trustcerts/wallet": "^0.3.3",
     "husky": "^7.0.4",
     "size-limit": "^6.0.3",
     "tsdx": "^0.14.1",
