--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -78,7 +78,7 @@
     "@trustcerts/claim-create": "^0.3.4",
     "@trustcerts/config-local": "^0.3.4",
     "@trustcerts/signature-create": "^0.3.4",
-    "@trustcerts/wallet": "^0.0.6",
+    "@trustcerts/wallet": "^0.3.4",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.7",
     "@types/protobufjs": "^6.0.0",
@@ -95,6 +95,7 @@
     "@trustcerts/signature-verify": "^0.3.4",
     "@trustcerts/template-create": "^0.3.4",
     "@trustcerts/template-verify": "^0.3.4",
+    "ajv": "^8.8.2",
     "mustache": "^4.2.0",
     "protobufjs": "^6.11.2",
     "qrcode": "^1.4.4"
