--- a/packages/url-shortener/package.json
+++ b/packages/url-shortener/package.json
@@ -17,7 +17,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "api": "openapi-generator-cli generate -g typescript-axios -i https://platform.dev.trustcerts.de/api-json -o src/platform --api-name-suffix=PlatformApi --additional-properties=supportsES6=true"
   },
   "husky": {
     "hooks": {
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.4",
+    "@trustcerts/config-cloud": "^0.3.4",
     "husky": "^7.0.4",
     "size-limit": "^7.0.4",
     "tsdx": "^0.14.1",
@@ -81,6 +83,7 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.4.18",
     "@trustcerts/core": "^0.3.4"
   }
 }
