--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.4.3",
-  "license": "MIT",
+  "version": "0.4.2",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
