--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.4.3",
-  "license": "MIT",
+  "version": "0.4.2",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -17,7 +17,6 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "api:gateway": "openapi-generator-cli generate -g typescript-axios -i https://api.gateway1.dev.trustcerts.de/api-json -o src/bc/gateway --api-name-suffix=GatewayApi --additional-properties=supportsES6=true",
     "api:observer": "openapi-generator-cli generate -g typescript-axios -i https://api.observer1.dev.trustcerts.de/api-json -o src/bc/observer --api-name-suffix=ObserverApi --additional-properties=supportsES6=true"
   },
   "husky": {
@@ -76,9 +75,9 @@
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.4.7",
     "@size-limit/preset-small-lib": "^5.0.5",
-    "@trustcerts/config-local": "^0.4.3",
-    "@trustcerts/did-id-create": "^0.4.3",
-    "@trustcerts/wallet": "^0.0.6",
+    "@trustcerts/config-local": "^0.4.2",
+    "@trustcerts/did-id-create": "^0.4.2",
+    "@trustcerts/wallet": "^0.4.2",
     "@types/axios": "^0.14.0",
     "@types/bs58": "^4.0.1",
     "husky": "^7.0.2",
@@ -90,6 +89,8 @@
   "dependencies": {
     "@mattrglobal/bls12381-key-pair": "^0.7.0",
     "@mattrglobal/jsonld-signatures-bbs": "^0.11.0",
+    "@trustcerts/gateway": "^0.1.0",
+    "@trustcerts/observer": "^0.1.0",
     "axios": "^0.24.0",
     "bs58": "^4.0.1",
     "jsonld-signatures": "^9.3.0"
