--- a/packages/vc-verify/package.json
+++ b/packages/vc-verify/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.4.3",
-  "license": "MIT",
+  "version": "0.4.2",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -83,10 +83,10 @@
   },
   "dependencies": {
     "@mattrglobal/jsonld-signatures-bbs": "^0.11.0",
-    "@trustcerts/config-local": "^0.4.3",
-    "@trustcerts/core": "^0.4.3",
-    "@trustcerts/vc-create": "^0.4.3",
-    "@trustcerts/wallet": "^0.0.6",
+    "@trustcerts/config-local": "^0.4.2",
+    "@trustcerts/core": "^0.4.2",
+    "@trustcerts/vc-create": "^0.4.2",
+    "@trustcerts/wallet": "^0.4.2",
     "base64url": "^3.0.1",
     "jose": "^4.3.7"
   },
