--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -16,8 +16,7 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why",
-    "api:platform": "openapi-generator-cli generate -g typescript-axios -i https://platform.dev.trustcerts.de/api-json -o src/platform --api-name-suffix=PlatformApi --additional-properties=supportsES6=true"
+    "analyze": "size-limit --why"
   },
   "husky": {
     "hooks": {
@@ -74,10 +73,11 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.4",
-    "@trustcerts/claim-create": "^0.4.3",
-    "@trustcerts/config-local": "^0.4.3",
-    "@trustcerts/signature-create": "^0.4.3",
-    "@trustcerts/wallet": "^0.4.3",
+    "@trustcerts/claim-create": "^0.4.2",
+    "@trustcerts/config-local": "^0.4.2",
+    "@trustcerts/gateway": "^0.1.0",
+    "@trustcerts/signature-create": "^0.4.2",
+    "@trustcerts/wallet": "^0.4.2",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.7",
     "@types/protobufjs": "^6.0.0",
@@ -89,11 +89,11 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@openapitools/openapi-generator-cli": "^2.4.7",
-    "@trustcerts/core": "^0.4.3",
-    "@trustcerts/signature-verify": "^0.4.3",
-    "@trustcerts/template-create": "^0.4.3",
-    "@trustcerts/template-verify": "^0.4.3",
+    "@trustcerts/core": "^0.4.2",
+    "@trustcerts/observer": "^0.1.0",
+    "@trustcerts/signature-verify": "^0.4.2",
+    "@trustcerts/template-create": "^0.4.2",
+    "@trustcerts/template-verify": "^0.4.2",
     "ajv": "^8.8.2",
     "mustache": "^4.2.0",
     "protobufjs": "^6.11.2",
