--- a/packages/did-id-create/package.json
+++ b/packages/did-id-create/package.json
@@ -74,6 +74,7 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.5",
     "@trustcerts/config-local": "^0.4.2",
+    "@trustcerts/observer": "^0.1.0",
     "@trustcerts/wallet": "^0.4.2",
     "@types/axios": "^0.14.0",
     "husky": "^7.0.2",
