--- a/packages/template-verify/package.json
+++ b/packages/template-verify/package.json
@@ -74,6 +74,7 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^6.0.4",
     "@trustcerts/config-local": "^0.4.2",
+    "@trustcerts/gateway": "^0.1.0",
     "@trustcerts/template-create": "^0.4.2",
     "@trustcerts/wallet": "^0.4.2",
     "husky": "^7.0.4",
@@ -83,7 +84,8 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.4.3"
+    "@trustcerts/core": "^0.4.2",
+    "@trustcerts/observer": "^0.1.0"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
