--- a/packages/url-shortener/package.json
+++ b/packages/url-shortener/package.json
@@ -17,7 +17,7 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "api": "openapi-generator-cli generate -g typescript-axios -i https://creator.dev.trustcerts.de/api-json -o src/platform --api-name-suffix=PlatformApi --additional-properties=supportsES6=true"
+    "api": "rm -r src/creator && openapi-generator-cli generate -g typescript-axios -i https://creator.dev.trustcerts.de/api-json -o src/creator --api-name-suffix=CreatorApi --additional-properties=supportsES6=true"
   },
   "husky": {
     "hooks": {
