--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci          
+          npm i
           ./build.sh
       - name: Run tests
         run: npm run test
