--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "install:clean": "npx lerna clean -y && rm -rf node_modules && npm i",
+    "install:clean": "npx lerna clean -y && rm -rf node_modules && npm i --force",
     "install:ci": "npm install --ignore-scripts && lerna link && lerna bootstrap --since origin/main --include-dependencies",
     "bootstrap": "lerna bootstrap",
     "lint": "lerna run lint --stream",
@@ -14,7 +14,8 @@
     "release": "lerna publish from-git --yes --no-verify-access",
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
-    "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react"
+    "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react",
+    "update": "lernaupdate"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "husky": "^7.0.2",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "lerna-update-wizard": "^1.1.0"
   },
   "husky": {
     "hooks": {
