--- a/packages/config-cloud/package.json
+++ b/packages/config-cloud/package.json
@@ -72,19 +72,19 @@
     ]
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.4.7",
-    "@size-limit/preset-small-lib": "^6.0.4",
+    "@openapitools/openapi-generator-cli": "^2.4.23",
+    "@size-limit/preset-small-lib": "^7.0.5",
     "@types/axios": "^0.14.0",
     "husky": "^7.0.4",
-    "size-limit": "^6.0.4",
+    "size-limit": "^7.0.5",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^3.9.10"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@trustcerts/core": "^0.4.4",
     "@trustcerts/platform": "^0.4.4",
-    "axios": "0.21.1"
+    "axios": "^0.24.0"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
