--- a/packages/vc-create/package.json
+++ b/packages/vc-create/package.json
@@ -72,23 +72,23 @@
     ]
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^5.0.5",
-    "@trustcerts/config-local": "^0.4.3",
-    "@trustcerts/wallet": "^0.4.3",
-    "husky": "^7.0.2",
-    "size-limit": "^5.0.5",
+    "@size-limit/preset-small-lib": "^7.0.5",
+    "@trustcerts/config-local": "^0.4.4",
+    "@trustcerts/wallet": "^0.4.4",
+    "husky": "^7.0.4",
+    "size-limit": "^7.0.5",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^3.9.10"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@mattrglobal/bls12381-key-pair": "^0.7.0",
-    "@mattrglobal/jsonld-signatures-bbs": "^0.11.0",
-    "@transmute/vc-status-rl-2020": "^0.7.0-unstable.8",
-    "@trustcerts/core": "^0.4.3",
+    "@mattrglobal/bls12381-key-pair": "^0.8.0",
+    "@mattrglobal/jsonld-signatures-bbs": "^0.12.0",
+    "@transmute/vc-status-rl-2020": "^0.7.0-unstable.32",
+    "@trustcerts/core": "^0.4.4",
     "@trustcerts/vc-revocation": "^0.4.5",
     "jose": "^4.3.7",
-    "jsonld-signatures": "5.0.1"
+    "jsonld-signatures": "^9.3.1"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
