--- a/packages/vc-create/package.json
+++ b/packages/vc-create/package.json
@@ -88,7 +88,7 @@
     "@trustcerts/core": "^0.4.4",
     "@trustcerts/vc-revocation": "^0.4.5",
     "jose": "^4.3.7",
-    "jsonld-signatures": "^9.3.1"
+    "jsonld-signatures": "5.0.1"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
