--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -19,21 +19,36 @@ jobs:
         with:
           node-version: "16"
 
-      - name: restore lerna
-        uses: actions/cache@v2
+      - name: Login into docker
+        uses: docker/login-action@v1
         with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.lock') }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}   
+
+      - name: Install trustcerts cli
+        run: npm install -g @trustcerts/cli
+
+      - name: Init blockchain
+        run: trusty -h localhost -v 3 -g 1 -o 1 -t latest
 
       - name: "Setup npm"
         run: |
           npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
 
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: node-cache
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+
       - name: Install dependencies
+        if: steps.node-cache.outputs.cache-hit != 'true'
         run: |
           npm i
           ./build.sh
+          
       - name: Run tests
         run: npm run test
