--- a/packages/config-cloud/package.json
+++ b/packages/config-cloud/package.json
@@ -83,8 +83,7 @@
   },
   "dependencies": {
     "@trustcerts/core": "^0.4.6",
-    "@trustcerts/platform": "^0.4.6",
-    "axios": "^0.24.0"
+    "@trustcerts/platform": "^0.4.6"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
