--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -17,7 +17,7 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "api": "rm -r src && openapi-generator-cli generate -g typescript-axios -i https://api.gateway1.dev.trustcerts.de/api-json -o src/ --api-name-suffix=GatewayApi --additional-properties=supportsES6=true"
+    "api": "rm -rf src/api && openapi-generator-cli generate -g typescript-axios -i https://api.gateway1.dev.trustcerts.de/api-json -o src/api --api-name-suffix=GatewayApi --additional-properties=supportsES6=true"
   },
   "husky": {
     "hooks": {
