--- a/packages/schema-create/package.json
+++ b/packages/schema-create/package.json
@@ -45,6 +45,8 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.5",
+    "@trustcerts/config-local": "^0.4.7",
+    "@trustcerts/wallet": "^0.4.7",
     "husky": "^7.0.4",
     "size-limit": "^7.0.5",
     "tsdx": "^0.14.1",
@@ -53,6 +55,7 @@
   },
   "dependencies": {
     "@trustcerts/core": "^0.4.6",
-    "@trustcerts/gateway": "^0.4.6"
+    "@trustcerts/gateway": "^0.4.6",
+    "@trustcerts/schema-verify": "^0.1.0"
   }
 }
