--- a/packages/signature-create/package.json
+++ b/packages/signature-create/package.json
@@ -84,8 +84,7 @@
   },
   "dependencies": {
     "@trustcerts/core": "^0.4.6",
-    "@trustcerts/gateway": "^0.4.6",
-    "axios": "^0.24.0"
+    "@trustcerts/gateway": "^0.4.6"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
