--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -2,7 +2,6 @@ name: Checks
 
 on: push
 
-
 jobs:
   checks:
     runs-on: ubuntu-latest
@@ -22,14 +21,14 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}   
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install trustcerts cli
         run: npm install -g @trustcerts/cli
 
       - name: Init blockchain
         run: trusty generate -h localhost -v 3 -g 1 -o 1 -t latest
-      
+
       - name: Start blockchain-nodes
         run: |
           docker network create test-network
@@ -37,7 +36,6 @@ jobs:
           ./all.sh up -d
           ./initNodes.sh
 
-          
       - name: "Setup npm"
         run: |
           npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
@@ -56,6 +54,5 @@ jobs:
         run: |
           npm i
           ./build.sh
-
-      - name: Run tests
-        run: npm run test
+      # - name: Run tests
+      #   run: npm run test
