fix: make load function abstract
Signed-off-by: Mirko Mollik <mollik@trustcerts.de>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -54,5 +54,5 @@ jobs:
         run: |
           npm i
           ./build.sh
-      # - name: Run tests
-      #   run: npm run test
+      - name: Run tests
+        run: npm run test
