--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "install:clean": "npx lerna clean -y && rm -rf node_modules && npm i --force",
     "install:ci": "npm install --ignore-scripts && lerna link && lerna bootstrap --since origin/main --include-dependencies",
     "bootstrap": "lerna bootstrap",
-    "lerna":"lerna",
+    "lerna": "lerna",
     "lint": "lerna run lint --stream",
     "test": "lerna run --concurrency=1 test --stream",
     "build": "./build.sh",
@@ -16,13 +16,15 @@
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
     "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react",
-    "update": "lernaupdate"
+    "update": "lernaupdate",
+    "trusty-generate": "trusty generate -h localhost -v 2 -o 1 -g 1"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:trustcerts/sdk.git"
   },
   "devDependencies": {
+    "@trustcerts/cli": "^1.0.18",
     "husky": "^7.0.2",
     "lerna": "^4.0.0",
     "lerna-update-wizard": "^1.1.0"
