--- a/packages/config-cloud/package.json
+++ b/packages/config-cloud/package.json
@@ -82,9 +82,8 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.4.7",
-    "@trustcerts/platform": "^0.4.6",
-    "axios": "^0.24.0"
+    "@trustcerts/core": "^0.4.6",
+    "@trustcerts/platform": "^0.4.6"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
