refactor: tmp push

--- a/packages/schema-verify/package.json
+++ b/packages/schema-verify/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@trustcerts/core": "^0.4.9",
+    "@trustcerts/gateway": "^0.4.8",
     "@trustcerts/observer": "^0.4.8"
   }
 }
