--- a/packages/signature-create/package.json
+++ b/packages/signature-create/package.json
@@ -83,9 +83,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.4.7",
-    "@trustcerts/gateway": "^0.4.6",
-    "axios": "^0.24.0"
+    "@trustcerts/core": "^0.4.9",
+    "@trustcerts/gateway": "^0.4.8",
+    "@trustcerts/signature-verify": "^0.4.9"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
