--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.4.11",
+  "version": "0.4.12",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -73,9 +73,9 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@trustcerts/config-local": "^0.4.11",
-    "@trustcerts/did-id-create": "^0.4.11",
-    "@trustcerts/wallet": "^0.4.11",
+    "@trustcerts/config-local": "^0.4.12",
+    "@trustcerts/did-id-create": "^0.4.12",
+    "@trustcerts/wallet": "^0.4.12",
     "@types/bs58": "^4.0.1",
     "husky": "^7.0.4",
     "size-limit": "^7.0.8",
@@ -86,8 +86,9 @@
   "dependencies": {
     "@mattrglobal/bls12381-key-pair": "^0.8.0",
     "@mattrglobal/jsonld-signatures-bbs": "^0.12.0",
-    "@trustcerts/gateway": "^0.4.10",
-    "@trustcerts/observer": "^0.4.10",
+    "@trustcerts/gateway": "^0.4.12",
+    "@trustcerts/observer": "^0.4.12",
+    "axios": "^0.26.0",
     "bs58": "^4.0.1",
     "jsonld-signatures": "^9.3.1"
   },
