--- a/packages/template-create/package.json
+++ b/packages/template-create/package.json
@@ -84,6 +84,8 @@
   "dependencies": {
     "@trustcerts/core": "^0.4.19",
     "@trustcerts/gateway": "^0.4.18",
+    "@trustcerts/schema-create": "^0.4.19",
+    "@trustcerts/template-verify": "^0.4.19",
     "ajv": "^8.8.2"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
