fix: update tests to did operations
Signed-off-by: Mirko Mollik <mollik@trustcerts.de>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -42,6 +42,7 @@ jobs:
           npm i
           ./build.sh
 
+      # TODO replace this with a static config
       - name: generate config folder
         run: npm run trusty-generate
 
