--- a/packages/claim-verify/package.json
+++ b/packages/claim-verify/package.json
@@ -76,7 +76,9 @@
     "@trustcerts/claim-create": "^0.4.20",
     "@trustcerts/config-local": "^0.4.20",
     "@trustcerts/gateway": "^0.4.20",
+    "@trustcerts/schema-create": "^0.4.20",
     "@trustcerts/signature-create": "^0.4.20",
+    "@trustcerts/template-create": "^0.4.20",
     "@trustcerts/wallet": "^0.4.20",
     "@types/mustache": "^4.1.2",
     "@types/node": "^17.0.8",
