publish nx branch

--- a/package.json
+++ b/package.json
@@ -2,21 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "install:clean": "npx lerna clean -y && rm -rf node_modules && npm i --force",
-    "install:ci": "npm install --ignore-scripts && lerna link && lerna bootstrap --since origin/main --include-dependencies",
-    "bootstrap": "lerna bootstrap",
-    "lerna": "lerna",
-    "lint": "lerna run lint --stream",
-    "test": "lerna run --concurrency=1 test --stream",
-    "build": "./build.sh",
-    "postinstall": "./bootstrap.sh",
-    "version": "lerna version --conventional-commits --conventional-graduate --yes",
-    "version:dev": "lerna version --conventional-commits --conventional-prerelease --preid beta --yes",
-    "release": "lerna publish from-git --yes --no-verify-access",
-    "release:canary": "lerna publish --canary",
-    "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
-    "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react",
-    "update": "lernaupdate"
+    "build": "nest build"
   },
   "repository": {
     "type": "git",
@@ -24,8 +10,11 @@
   },
   "devDependencies": {
     "husky": "^7.0.2",
-    "lerna": "^4.0.0",
-    "lerna-update-wizard": "^1.1.0"
+    "@nrwl/workspace": "latest",
+    "nx": "latest",
+    "@nrwl/cli": "latest",
+    "typescript": "4.2.4",
+    "@nrwl/nx-cloud": "latest"
   },
   "husky": {
     "hooks": {
